@@ -4,7 +4,7 @@
 **Branch**: `don`  
 **Đang làm**: End-to-end pipeline đã hoàn thành và verify thành công  
 **Lý do**: Full data flow từ AI detection → Pulsar (JSON) → Flink streaming → Iceberg Bronze (MinIO) đang hoạt động  
-**Mới cập nhật**: Fix Avro schema mismatch bằng cách chuyển sang JSON format; 288 messages đã được ghi thành công vào Bronze layer với 3 Parquet files
+**Mới cập nhật**: Bật lại checkpointing (60s) và thêm JVM `--add-opens` để Flink Bronze job commit dữ liệu; 288 messages đã được ghi thành công vào Bronze layer với 7 Parquet files
 
 ## TODO & Next Steps (Các bước tiếp theo - ưu tiên)
 
@@ -20,7 +20,7 @@
    - Configure alerts cho job failures
    
 3. **Performance Optimization**
-   - Enable Flink checkpointing (fix Java reflection issue)
+   - Theo dõi checkpoint duration & cảnh báo thất bại
    - Tune Flink parallelism và resource allocation
    - Optimize Iceberg write patterns
 
@@ -51,11 +51,11 @@
 ## Latest Checks (Kết quả test gần nhất)
 - **Docker Infrastructure**: ✅ All services running (Pulsar, Flink, MinIO, Iceberg REST)
 - **Port Configuration**: ✅ No conflicts (Pulsar:8082, Flink:8081, MinIO:9000/9001, Iceberg:8181)
-- **MinIO Setup**: ✅ Warehouse bucket created, 67KiB data stored
+- **MinIO Setup**: ✅ Warehouse bucket ~155KiB data (7 Parquet + metadata) sau Bronze commit
 - **Pulsar Setup**: ✅ JSON schema registered, 288 messages sent successfully
 - **Flink Setup**: ✅ JobManager + TaskManager healthy
-- **Flink Bronze Job**: ✅ Completed successfully, consumed all 288 messages
-- **Iceberg Bronze Table**: ✅ 3 Parquet files in `warehouse/rva/bronze_raw/data/store_id=store_01/`
+- **Flink Bronze Job**: ✅ Checkpoint 60s chạy thành công, tiêu thụ hết 288 messages và commit file
+- **Iceberg Bronze Table**: ✅ 7 Parquet files (~20KiB/file) tại `warehouse/rva/bronze_raw/data/store_id=store_01/`
 - **Data Flow**: ✅ End-to-end pipeline verified (Video → AI → Pulsar → Flink → Iceberg)
 - **Schema Format**: ✅ JSON (changed from Avro to fix deserialization issues)
 
@@ -71,13 +71,13 @@
 - **Python**: 3.12 (venv: `.venv312/`), packages: ultralytics, opencv-python, deep-sort-realtime, pulsar-client[avro]==3.5.0
 - **Docker Services**: Pulsar 3.3.2 (6650,8082), Flink 1.18 (8081), MinIO (9000,9001), Iceberg REST 0.7.0 (8181)
 - **Docker Compose**: 4-service stack fully operational
-- **Flink Config**: Checkpointing disabled (tạm thời để tránh Java reflection error)
+- **Flink Config**: Checkpointing 60s bật lại; thêm `--add-opens` java.util/java.lang/java.nio/sun.nio.ch
 - **Pulsar Client**: Python 3.5.0 (JSON schema), Flink connector 4.1.0-1.18 (JSON format)
 
 ## Notes
 - **Avro → JSON Migration**: Changed producer from AvroSchema to JsonSchema due to Flink-Pulsar Avro deserialization incompatibility
-- **Checkpointing**: Disabled temporarily (Java reflection issue with Arrays$ArrayList), không ảnh hưởng demo flow
-- **Data Verified**: 288 messages successfully written to 3 Parquet files (20KiB each)
+- **Checkpointing**: Đã bật (60s) sau khi bổ sung JVM `--add-opens` cho java.util, java.lang, java.nio, sun.nio.ch
+- **Data Verified**: 288 messages successfully written to 7 Parquet files (~20KiB each), checkpoint commit OK
 - **Branch `don`**: Complete working pipeline, ready for Silver/Gold layer development
 - **Performance**: Job processed all messages without errors after JSON format change
 
